trying to fix bug